--- a/index.html
+++ b/index.html
@@ -8,7 +8,84 @@
   <title>Sued Têxtil</title>
 </head>
 <body>
-  <h2>SUED TÊXTIL</h2>
-  <p>Site em construção</p>
+  <div id="em_construcao">
+  <header>
+    <img src="images/logo_SuedTextil.svg" alt="sued têxtil">
+    <nav>
+      <ul>
+        <li>Quem Somos</li>
+        <li>Portfolio</li>
+        <li>Contato</li>
+      </ul>
+    </nav>
+  </header>
+  <section id="home">
+    <div class="logo_Home"><img id="logo" src="images/logo_SuedTextil.svg" alt="logotipo Sued têxtil"></div>
+    <div class="carrossel"><img id="temp" src="images/large02.jpg"></div>
+    <div class="menu_Home">
+      <nav>
+      <ul>
+        <li>Quem Somos</li>
+        <li>Portfolio</li>
+        <li>Contato</li>
+      </ul>
+      </nav>
+    </div>
+  </section>
+  <section id="quem_somos">
+    <div class="carrossel_2"><img id="temp" src="images/large03.jpg"></div>
+    <div class="infos">
+      <img src="images/temp.jpg" alt="foto da empresa" id="empresa">
+      <div id="texto_quem_somos">
+        <p>Sed facilisis elementum dapibus. Nulla consectetur, tortor
+          at rutrum euismod, ipsum magna varius tellus, in
+          malesuada mi elit consectetur urna. Proin non tellus sem.
+          Etiam semper pretium metus quis dapibus. Praesent
+          tempor felis quis vulputate fringilla. Vestibulum placerat
+          sapien vel massa consequat cursus. Vivamus id magna
+          sed nisl pretium tempus non eget enim. Vivamus dapibus
+          eget diam id pulvinar. Class aptent taciti sociosqu ad
+          litora torquent per conubia nostra, per inceptos
+          himenaeos. Sed nisl enim, sollicitudin quis facilisis et,
+          rutrum quis velit. Phasellus congue purus eu sapien
+          ornare fringilla. Suspendisse dapibus ullamcorper orci et
+          commodo. Nullam gravida tempor turpis eget venenatis.
+        </p>
+        <button id="btn_fale_conosco">Fale conosco</button>
+      </div>
+    </div>
+  </section>
+  <section id="portfolio">
+
+  </section>
+  <section id="contato">
+    <div id="endereco_e_mapa">
+      <div id="mapa"></div>
+      <div id="endereco">
+        R. Werner Duwe, 1606 <br> Testo Salto - CEP 89070-758 <br> Blumenau, Santa Catarina <br> <strong>(47) 3144-2500</strong> <br> contato@suedtextil.com.br
+      </div>
+    </div>
+    <div id="formulario_contato">
+      <form>
+        <label for="nome">Nome</label>
+        <input type="text" placeholder="Nome Sobrenome" name="nome">
+        <label for="email">E-mail*</label>
+        <input type="email" placeholder="email@dominio.com.br" name="email">
+        <label for="telefone">Telefone</label>
+        <input type="tel" placeholder="(47) 99999-9999" name="telefone">
+        <label for="assunto">Assunto*</label>
+        <input type="text" placeholder="Orçamento" name="assunto">
+        <label for="mensagem">Mensagem*</label>
+        <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
+        <p id="asterisco">Itens marcados com * são obrigatórios</p>
+      </form>
+    </div>
+  </section>
+</div>
+  
+  
+  
+  <img id="temp_logo" src="images/logo_SuedTextil_branco.svg" alt="">
+  <h2>Site em construção</h2>
 </body>
 </html>
