favicon e pequenos ajustes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100;200;300;400;500;600;700&family=Mulish:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100;200;300;400;500;600;700&family=Mulish:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <script src="./scripts/main_script.js"></script>
+  <script src="./script.js"></script>
   <title>Sued Têxtil</title>
 </head>
 <body>
@@ -41,7 +43,7 @@
   <section id="quem_somos">
     <div class="wideBg carrossel_2">
       <img src="images/large02.jpg">
-      <div id="chamada2">Lorem ipsum <br> dolor sit amet</div>
+      <div id="chamada2">Experiência <br> e qualidade </div>
       <img id="abvtex" src="images/SELO-ABVTEX.jpg">
     </div>
     <div class="infos">
